ledger page percent icon alignment and manufacturing create page alignment issue fix

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -3924,7 +3924,7 @@ a.btn.btn-xs.btn-link.pull-right {
 .multi-select input.form-control {
     background-image: var(--color-caret-image) !important;
     background-size: 10px !important;
-    background-position: 95% !important;
+    background-position: 97% !important;
     background-repeat: no-repeat !important;
     background-color: var(--color-white) !important;
     padding-right: 24px !important;
